formulario de jugadores con angular material

--- a/cliente/src/app/modules/game/pages/new-game/new-game.component.html
+++ b/cliente/src/app/modules/game/pages/new-game/new-game.component.html
@@ -1,15 +1,23 @@
-<h2>Mi primer formulario reactivo</h2>
-<form id="frmJugadores" [formGroup]="frmJugadores" (ngSubmit)="frmJugadores.valid ? submit() : false">
-  <select name="jugadores" multiple class="jugadores" formControlName="jugadores">
-    <option *ngFor="let jugador of jugadores" [value]="jugador.id">
-      {{ jugador.name }}
-    </option>
-  </select>
-  <br>
-  <div class="error" *ngIf="frmJugadores.get('jugadores')?.hasError('required')">Debes seleccionar por lo menos un
-    jugador</div>
-  <br>
-</form>
-<button form="frmJugadores" mat-raised-button color="primary" type="submit" [disabled]="frmJugadores.invalid">Crear
-  Juego</button>
-<button mat-raised-button color="accent" type="button" (click)="btnLogout()">Logout</button>
+<div class="contenedor">
+  <div>
+    <h2>Crear juego</h2>
+  </div>
+  <div class="contenedorFormulario">
+    <mat-form-field appearance="fill" class="jugadores" id="frmJugadores" [formGroup]="frmJugadores"
+      (ngSubmit)="frmJugadores.valid ? submit() : false">
+      <mat-label>Selecciona los jugadores </mat-label>
+      <!-- <mat-select [formControl]="toppings" multiple> -->
+      <mat-select multiple name="jugadores" formControlName="jugadores">
+        <mat-option *ngFor="let jugador of jugadores" [value]="jugador.id">{{jugador.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <br>
+    <div class="error" *ngIf="frmJugadores.get('jugadores')?.hasError('required')">Debes seleccionar por lo menos un
+      jugador</div>
+    <br>
+    <button form="frmJugadores" mat-raised-button color="primary" type="submit" [disabled]="frmJugadores.invalid">Crear
+      Juego</button>
+    <button mat-raised-button color="accent" type="button" (click)="btnLogout()">Logout</button>
+  </div>
+
+</div>
