--- a/cliente/src/app/modules/game/pages/new-game/new-game.component.scss
+++ b/cliente/src/app/modules/game/pages/new-game/new-game.component.scss
@@ -1,5 +1,18 @@
+.contenedor{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  // border: solid 1px black;
+}
+
+.contenedorFormulario{
+  width: 400px;
+}
+
 .jugadores {
-  width: 200px;
+  width: 400px;
 }
 
 .error {
