--- a/cliente/src/app/modules/game/pages/log-in/log-in.component.html
+++ b/cliente/src/app/modules/game/pages/log-in/log-in.component.html
@@ -1,3 +1,6 @@
-<button mat-raised-button color="primary" type="button" (click)="btnLogin()">
-  Identifacar con Google
-</button>
+<div class="contenedor">
+  <h1>Bienvenido, inicia sesion para jugar</h1>
+  <button mat-raised-button color="primary" type="button" (click)="btnLogin()">
+    Ingresar con Google
+  </button>
+</div>
