vista lista de juegos

--- a/cliente/src/app/modules/game/pages/board/board.component.html
+++ b/cliente/src/app/modules/game/pages/board/board.component.html
@@ -27,6 +27,7 @@
             <div class="card"><button mat-raised-button color="primary" class="botonPoner">poner</button></div>
             <div class="card"><button mat-raised-button color="primary" class="botonPoner">poner</button></div>
             <div class="card"><button mat-raised-button color="primary" class="botonPoner">poner</button></div>
+            <div class="card"><button mat-raised-button color="primary" class="botonPoner">poner</button></div>
         </div>
     </div>
 </div>
