--- a/cliente/src/app/modules/game/pages/home/home.component.html
+++ b/cliente/src/app/modules/game/pages/home/home.component.html
@@ -10,5 +10,5 @@
     <div class="div3">
         <p>Invita a tus amigos</p>
     </div>
-    <button mat-raised-button color="basic" class="botonConsultar">Consultar juegos creados</button>
+    <button mat-raised-button color="basic" class="botonConsultar" (click)="consultarJuegos()" >Consultar juegos creados</button>
 </div>
