--- a/cliente/src/app/modules/game/pages/lista-dejuegos/lista-dejuegos.component.html
+++ b/cliente/src/app/modules/game/pages/lista-dejuegos/lista-dejuegos.component.html
@@ -7,7 +7,8 @@
         </div>
         <div class="items">
             <span>juego1</span>
-            <button mat-raised-button color="primary">Iniciar 5</button>
+            <!-- <button mat-raised-button color="primary">Iniciar 5</button> -->
+            <button mat-raised-button color="primary">Iniciar <span>5</span></button>
         </div>
         <div class="items">
             <span>juego2</span>
